k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: petclinic-syl.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  name: http
